hphp/hack/test/typecheck/needs_concrete/needs_concrete_7.php.exp
ERROR: File "needs_concrete_7.php", line 17, characters 13-15:
Cannot call `C::foo` (a `<<__NeedsConcrete>>` method) via `parent`. It requires `static` to refer to a concrete class, but `parent` sets `static` to a class that may not be concrete. (Typing[4490])
  File "needs_concrete_7.php", line 5, characters 26-28:
  Declaration is here
